...
            bioLabel.leadingAnchor.constraint(equalTo: nameLabel.leadingAnchor)
        ])
    }
    
    private func updateProfileDetails(profile: ProfileService.Profile) {
        nameLabel.text = profile.name
        usernameLabel.text = profile.loginName  // loginName — это username с символом "@"
        bioLabel.text = profile.bio
    }
    
    // MARK: - Actions
    
    @objc
    private func didTapLogout() {
        let alert = UIAlertController(
            title: "Выход",
            message: "Вы уверены, что хотите выйти?",
            preferredStyle: .actionSheet)
        
        alert.addAction(UIAlertAction(title: "Да, выйти", style: .destructive) { _ in
            ProfileLogoutService.shared.logout()
        })
        alert.addAction(UIAlertAction(title: "Отмена", style: .cancel))
        
        present(alert, animated: true)
    }
...
