...
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="16"/>
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="likeButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GbN-ul-ZNg" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="Wtt-on-BIb"/>
                                                        <constraint firstAttribute="height" constant="44" id="xxk-c7-OIx"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="K24-qu-UUo"/>
                                    <constraint firstAttribute="height" constant="60" id="UEQ-cd-H1g"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bHx-M2-rz5">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="g9W-10-uqg"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
