...
            fatalError("Нет доступного окна")
        }
        window.rootViewController = splashViewController
        window.makeKeyAndVisible()
    }
    func showLogoutAlert() {
        let alert = UIAlertController(title: "Пока, пока!", message: "Уверены, что хотите выйти?", preferredStyle: .alert)
        
        let yesAction = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            self?.presenter.didConfirmLogout() // Сообщаем презентеру о подтверждении выхода
        }
        
        let noAction = UIAlertAction(title: "Нет", style: .cancel)
...
